--- a/Talespire Codec/Talespire Codec.csproj
+++ b/Talespire Codec/Talespire Codec.csproj
@@ -49,8 +49,12 @@
     <ErrorReport>prompt</ErrorReport>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\Talespire-Generator-Core\Generator Core\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Text.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,17 +64,27 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Asset.cs" />
     <Compile Include="Classes\Bounds.cs" />
+    <Compile Include="Classes\Float4.cs" />
     <Compile Include="Classes\Float3.cs" />
-    <Compile Include="JsonReader.cs" />
+    <Compile Include="Classes\Icon.cs" />
+    <Compile Include="Classes\IconAtlas.cs" />
+    <Compile Include="Classes\IconAtlasPath.cs" />
+    <Compile Include="Classes\LoaderData.cs" />
+    <Compile Include="Classes\Map.cs" />
+    <Compile Include="Classes\Prop.cs" />
+    <Compile Include="Classes\Region.cs" />
+    <Compile Include="ObjectReader.cs" />
     <Compile Include="Structures\Position.cs" />
     <Compile Include="Codec.cs" />
-    <Compile Include="Structures\Asset.cs" />
+    <Compile Include="Structures\CodecAsset.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Classes\Tile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="index.json" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
